# iikanji-kakeibo-client-mcp

./: .gitignore  README.md  pyproject.toml
src/iikanji_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_client.py  test_server.py
